[tool.poetry]
name = "llmcourse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "1.0.502"
langchain = "0.1.15"
numpy = "1.26.4"
openai = "1.17.0"
pandas = "2.2.2"
seaborn = "0.13.2"
matplotlib = "3.8.4"
chromadb = "0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
